--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.27",
+    "html2canvas": "^1.4.1",
     "vue": "^3.2.45",
     "vue-echarts": "^6.4.0"
   },
