--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.27",
+    "mongodb": "^6.5.0",
     "vue": "^3.2.45",
     "vue-echarts": "^6.4.0"
   },
   "devDependencies": {
+    "@vercel/node": "^3.0.27",
     "@vitejs/plugin-vue": "^4.0.0",
     "rollup-plugin-external-globals": "^0.7.1",
     "sass": "^1.57.1",
